--- a/demo/index.html
+++ b/demo/index.html
@@ -63,59 +63,65 @@
 </div>
 
 <script type="text/javascript">
-    // dropzone form init
-    $dropzoneForm.init("#form1", ".dropzone", {
-        beforeSubmit: function (e, _form) { // submit before action
+    
+    // 콜백함수 지정
+    var _callback = {
+        beforeSubmit: function (_form) { // submit 전 동작
             if (!confirm('before Submit Action!')) {
                 return false;
             }
         },
-        afterSubmit: function (e, _form, response) { // submit after action
+        afterSubmit: function (_form, response) { // submit 후 동작
             console.log(response);
             return false;
         },
-        getParams: function (el) { // get Param init
+        getParams: function (el) { // 파라미터 지정 (getList 사용시)
             return {
                 act: 'getList',
                 name: $(el).data('name'),
             };
         },
-        // getList: function (myDropzone) { // get list request and print
-        //     var params = myDropzone.options.params;
-        //     var paramName = myDropzone.options.paramName;
-        //     var url = myDropzone.options.url;
-        //
-        //     // list request
-        //     $.ajax({
-        //         url: url,
-        //         method: 'post',
-        //         data: params,
-        //         dataType: 'json',
-        //         success: function (response) {
-        //             var list = response;
-        //             if (list) {
-        //                 $.each(list, function (idx, item) {
-        //                     var filepath = item.src;
-        //                     var mockFile = {
-        //                         id: item.id,
-        //                         name: paramName,
-        //                     };
-        //                     myDropzone.emit("addedfile", mockFile);
-        //                     myDropzone.emit("thumbnail", mockFile, filepath);
-        //                     myDropzone.emit("complete", mockFile);
-        //                 });
-        //             }
-        //         },
-        //         error: function (err) {
-        //             alert('error  : ' + err);
-        //         }
-        //     });
-        // }
-    }, { // custom options
-        dictRemoveFile: '[삭제]',
-        dictDefaultMessage: '업로드할 이미지를 드래그해서 올려주세요.',
-        dictFileTooBig: '파일용량 초과 10MB 이하로 다시 업로드하세요',
-    });
+        getList: function (myDropzone) { // 이미 등록된 파일리스트를 바인딩시킴
+            var params = myDropzone.options.params;
+            var paramName = myDropzone.options.paramName;
+            var url = myDropzone.options.url;
+
+            // list request
+            $.ajax({
+                url: url,
+                method: 'post',
+                data: params,
+                dataType: 'json',
+                success: function (response) {
+                    var list = response;
+                    if (list) {
+                        $.each(list, function (idx, item) {
+                            var filepath = item.src;
+                            var mockFile = {
+                                id: item.id,
+                                name: paramName,
+                            };
+                            myDropzone.emit("addedfile", mockFile);
+                            myDropzone.emit("thumbnail", mockFile, filepath);
+                            myDropzone.emit("complete", mockFile);
+                        });
+                    }
+                },
+                error: function (err) {
+                    alert('error  : ' + err);
+                }
+            });
+        }
+    };
+
+    // 수정할 옵션
+    var _options = {
+        dictRemoveFile: '[삭제]', // 삭제버튼
+        dictDefaultMessage: '업로드할 이미지를 드래그해서 올려주세요.', // 드래그 영역 문구
+    };
+
+    // dropzone form init
+    $dropzoneForm.init("#form1", ".dropzone", _callback, _options);
 </script>
 
 </body>
